2004-10-21  Jeremy Handcock  <jbh@ualberta.ca>

	* developer/structure.html: Change my status to independent.

2004-10-18  Jeremy Handcock  <handcock@redhat.com> 
		
	* index.html: Update news, add downloads link.
	* downloads.html: New.
