@@ -37,7 +37,7 @@ Development Tools</a> (CDT) project.</p>
 
 <p>Committers:
 <ul>
-<li>Jeremy Handcock (Independent)</li>
+<li>Jeremy Handcock (Red Hat)</li>
 <li>Rick Moseley (Red Hat)</li>
 <li>Phillip Muldoon (Red Hat)</li>
 <li>Keith Seitz (Red Hat)</li>
