@@ -41,7 +41,7 @@ with Eclipse-RPM.</p>
 <p>Eclipse-RPM is licensed under the terms of the <a
 href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License</a> and
 is implemented in Java as a set of plug-ins to the <a
-href="http://www.eclipse.org">Eclipse</a> platform.
+href="http://www.eclipse.org">Eclipse</a> platform.</p>
 
 <!-- End About section -->
 
@@ -51,6 +51,12 @@ href="http://www.eclipse.org">Eclipse</a> platform.
 </table>
 <table width="100%" cellspacing="5" cellpadding="5">
 <tr><td>
+
+<p class="subsection">Eclipse-RPM 3.0 Plan</p>
+
+<p>A draft of the <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/planning/eclipse-rpm-3_0.html?cvsroot=Tools_Project">Eclipse-RPM 3.0 development plan</a> is now available.  Comments and feedback are greatly appreciated and should be directed toward the mailing list.</p>
+
+<p class="timestamp">posted 2005-01-04 by Jeremy Handcock</p>
 
 <p class="subsection">Eclipse-RPM is now available!</p>
 
@@ -111,7 +117,7 @@ Bugs are filed under the CDT project, CDT-Contrib component</td>
 </tr>
 
 <tr>
-<td>Development Plans</td>
+<td><a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/planning/index.html?cvsroot=Tools_Project">Development Plans</a></td>
 <td>Eclipse-RPM plans and status</td>
 </tr>
 
@@ -120,7 +126,7 @@ Bugs are filed under the CDT project, CDT-Contrib component</td>
 </tr>
 
 <tr>
-<td>Mailing List</td>
+<td><a href="https://dev.eclipse.org/mailman/listinfo/cdt-contrib-dev">Mailing List</a></td>
 <td><a href="mailto:cdt-contrib-dev@eclipse.org">cdt-contrib-dev@eclipse.org</a></td>
 </tr>
 
