@@ -1,0 +1,181 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+
+<html>
+<head>
+<title>Eclipse-RPM 3.0 Development Plan</title>
+<link rel="stylesheet" href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/css/main.css?cvsroot=Tools_Project" type="text/css">
+</head>
+<body>
+<table width="100%">
+<tr>
+<td>
+<p class="indextop">Eclipse-RPM 3.0 Development Plan</p>
+<p class="indexsub">Eclipse-RPM/CDT 3.0</p>
+</td>
+<td align="right">
+<img src="http://dev.eclipse.org/images/Idea.jpg" alt="Idea">
+</td>
+</tr>
+</table>
+
+<table class="section">
+<tr><td>Contents</td></tr>
+</table>
+<ul>
+<li><a href="#deliverables">Release Deliverables</a></li>
+<li><a href="#milestones">Release Milestones/Timeline</a></li>
+<li><a href="#themes">Themes and Priorities</a></li>
+</ul>
+
+<a name="deliverables">
+<table class="section">
+<tr><td>Release Deliverables</td></tr>
+</table>
+<p>The following deliverables are required for the Eclipse-RPM 3.0 release:</p>
+<ul>
+<li>Source code tagged as eclipse-rpm-3_0 in the Eclipse-RPM repository</li>
+<li>Eclipse-RPM binaries (downloadable)</li>
+</ul>
+
+<a name="milestones">
+<table class="section">
+<tr><td>Release Milestones/Timeline</td></tr>
+</table>
+<p>Eclipse-RPM 3.0 development will mirror CDT 3.0 and Eclipse 3.1 development
+as closely as possible.  We will try to synchronize with Eclipse platform
+development approximately every six weeks, but the schedule may change as we
+move forward.</p>
+
+<table class="grid" border="1" cellpadding="5">
+<tr>
+<th>Milestone</th>
+<th>Date</th>
+<th>Requirements</th>
+<th>Platform Driver</th>
+</tr>
+<tr>
+<td>M1</td>
+<td>January 14, 2005</td>
+<td>Automated builds in place<br>Draft plan accepted by committers</td>
+<td>Eclipse 3.1 M4</td>
+</tr>
+<tr>
+<td>M2</td>
+<td>February 18, 2005</td>
+<td>Stable build reflecting progress<br>Core refactor complete</td>
+<td>Eclipse 3.1 M4</td>
+</tr>
+<tr>
+<td>M3</td>
+<td>April 1, 2005</td>
+<td>Stable build reflecting progress</td>
+<td>Eclipse 3.1 M5</td>
+</tr>
+<tr>
+<td>M4</td>
+<td>May 13, 2005</td>
+<td>Stable build reflecting progress<br>Test plans in place</td>
+<td>Eclipse 3.1 M6/RC0</td>
+</tr>
+<tr>
+<td>M5</td>
+<td>June 10, 2005</td>
+<td>Development freeze, feature complete</td>
+<td>Eclipse 3.1 M6/RC0</td>
+</tr>
+<tr>
+<td>M6/RC0</td>
+<td>June 24, 2005</td>
+<td>Final freeze<br>Testing completed<br>Release candidate available</td>
+<td>Eclipse 3.1 RC1</td>
+</tr>
+</table>
+
+<p>We'll shoot for GA shortly after July 1, 2005, but this will depend on the
+Eclipse 3.1 schedule.</p>
+
+<a name="themes">
+<table class="section">
+<tr><td>Themes and Priorities</td></tr>
+</table>
+
+<ol>
+<li class="subsection">Maintainable Core Model</li>
+
+<p>The major theme of the Eclipse-RPM 3.0 plan is to promote lasting
+maintainability of the Eclipse-RPM core (represented by the
+org.eclipse.cdt.rpm.core plug-in).  Most items in the Eclipse-RPM 3.0 plan are
+dependent on the core refactor.</p>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82195">82195</a>: Refactor org.eclipse.cdt.rpm.core (P1)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82196">82196</a>: Move propertypage plug-in to org.eclipse.cdt.rpm.ui (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82197">82197</a>: Add RPM project nature (P3)</li>
+</ul>
+
+<p></p>
+
+<li class="subsection">CDT Builder Integration</li>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82192">82192</a>: Automatically add configure as external builder (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82194">82194</a>: Automatically invoke CDT builder on imported C/C++ projects (P3)</li>
+</ul>
+
+<p></p>
+
+<li class="subsection">Standards Adherence</li>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82190">82190</a>: Define code formatting settings for Eclipse-RPM projects (P1)</li>
+<li>Fix specific violations of the Eclipse UI guidelines (bugzilla entries to follow)</li>
+</ul>
+
+<p></p>
+
+<li class="subsection">User Experience</li>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82178">82178</a>: Implement rpmbuild context menu actions for spec files (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82179">82179</a>: Export to a user-defined location (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82180">82180</a>: Implement text-based spec file editor (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82188">82188</a>: Integrate patch generation process with Platform compare (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=78772">78772</a>: RPM Export should show patch (P3)</li>
+</ul>
+
+<p></p>
+
+<li class="subsection">Software Quality</li>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82174">82174</a>: Automated builds for Eclipse-RPM and Eclipse-OProfile (P1)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82176">82176</a>: Implement unit tests (P2)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82177">82177</a>: Update and publish manual test plans (P2)</li>
+</ul>
+
+<p></p>
+
+<li class="subsection">Other</li>
+
+<p>Proposed items:</p>
+
+<ul>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=76886">76886</a>: Cannot export two SRPMs at the same time (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=78773">78773</a>: Patch naming should guard against special characters (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=78893">78893</a>: NullPointerException during RPM export (P3)</li>
+
+</ol>
+
+</body>
+</html>
