@@ -1,0 +1,29 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+
+<html>
+<head>
+<title>Eclipse-RPM 3.0 Draft Plan</title>
+<link rel="stylesheet" href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/css/main.css?cvsroot=Tools_Project" type="text/css">
+</head>
+<body>
+<table width="100%">
+<tr>
+<td>
+<p class="indextop">Eclipse-RPM Project Planning</p>
+</td>
+<td align="right">
+<img src="http://dev.eclipse.org/images/Idea.jpg" alt="Idea">
+</td>
+</tr>
+</table>
+
+<table class="section">
+<tr><td>Development Plans</td></tr>
+</table>
+<ul>
+<li><a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/planning/eclipse-rpm-3_0.html?cvsroot=Tools_Project">Eclipse-RPM 3.0 Development Plan</a></li>
+</ul>
+
+</body>
+</html>
